--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "preview": "vitepress preview docs"
   },
   "devDependencies": {
+    "markdown-it-mathjax3": "^4.3.2",
     "vitepress": "^1.4.3"
   }
 }
