--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "scripts": {
     "dev": "vitepress dev docs",
     "build": "vitepress build docs",
-    "preview": "vitepress preview docs"
+    "preview": "vitepress preview docs",
+    "export-pdf": "press-export-pdf export docs"
   },
   "devDependencies": {
     "markdown-it-mathjax3": "^4.3.2",
-    "vitepress": "^1.4.3"
+    "vitepress": "^1.4.3",
+    "vitepress-export-pdf": "^1.0.0"
   }
 }
