--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,22 +31,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Not needed if lastUpdated is not enabled
-      # - uses: pnpm/action-setup@v3 # Uncomment this block if you're using pnpm
-      #   with:
-      #     version: 9 # Not needed if you've set "packageManager" in package.json
-      - uses: oven-sh/setup-bun@v1 # Uncomment this if you're using Bun
-      # - name: Setup Node
-      #   uses: actions/setup-node@v4
-      #   with:
-      #     node-version: 20
-      #     cache: npm # or pnpm / yarn
+          fetch-depth: 0
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Install dependencies
-        run: bun install # or pnpm install / yarn install / bun install
+        run: bun install
       - name: Build with VitePress
-        run: bun run build # or pnpm docs:build / yarn docs:build / bun run docs:build
+        run: bun run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
